phone flicker bug fix try2

--- a/css/style.css
+++ b/css/style.css
@@ -214,8 +214,8 @@ section {
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
-    transform: translateZ(0);
-    -webkit-transform: translateZ(0);
+    transform: translateZ(1);
+    -webkit-transform: translateZ(1);
 }
 
 
